apps/media/calibre-web/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  serviceName: calibre-web
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: lscr.io/linuxserver/calibre-web:latest
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: config
              mountPath: /config
            - name: books
              mountPath: /books
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: books
      spec:
        accessModes: [ReadWriteOnce]
        storageClassName: longhorn
        resources:
          requests:
            storage: 8Gi
